# automata

./: README.md  dataframe.py  env.sample  pyproject.toml  segrun.txt
data/: alias_history.json  dataset.json
dataset_sample/: 0d0d3b66-4200077108_1914_159.txt  16bc769a-4200079762_2821_159.txt  62eebade-4200079768_2502_159.txt  76b7a0c7-4200079770_2126_159.txt  961f9b80-4200079766_5015_159.txt  9fc6438d-4200079765_1905_159.txt  ac0a781d-4200079764_2924_159.txt  bcd7757f-4200079763_2732_159.txt  classes.txt  e8505487-4200079769_2219_159.txt  f15f61e9-4200079767_2552_159.txt
src/: DINO.py  autotuner.py  dataset.py  generate.py  grounDet.py  image.py  langAPI.py  metrics.py  old_DINO.py  phi3.py  pipeline.py  prompts.py  visionAPI.py
src/agents/: paligemma.py
src/autolabel/: labeler.py  pipeline.py
src/automata/: interface.py  pallet.py  prophet.py  segui.py
src/autotune/: generate.py  gui.py  tuner.py
src/demo/: interface.py
src/gradiops/: ops.py
src/manual/: dino_gui.py
src/models/: dino.py  fastsam.py  pgemma.py
src/operations/: crop.py  nms.py  tests.py
tutorials/: tensors.py
